log/build_2021-06-10_00-40-41/control_pkg/stderr.log
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp: In constructor ‘Control_PID_P1_node::Control_PID_P1_node()’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:113:79: error: expected ‘;’ before ‘subs_img_data’
  113 |    client = this->create_client<interfaces::srv::PlatformVel>("platform1_vel")
      |                                                                               ^
      |                                                                               ;
  114 | 
  115 |    subs_img_data = this->create_subscription<interfaces::msg::ImgData>(
      |    ~~~~~~~~~~~~~                                                               
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp: In member function ‘void Control_PID_P1_node::send_vel()’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_node.cpp:377:16: error: return-statement with a value, in function returning ‘void’ [-fpermissive]
  377 |         return 0;
      |                ^
make[2]: *** [CMakeFiles/control_pid_p1_node.dir/build.make:63: CMakeFiles/control_pid_p1_node.dir/src/control_pid_p1_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:107: CMakeFiles/control_pid_p1_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
